--- a/main.ipynb
+++ b/main.ipynb
@@ -25,6 +25,7 @@
     "import smtplib\n",
     "import pandas as pd\n",
     "from datetime import datetime, timedelta\n",
+    "from pandas import Timestamp\n",
     "\n",
     "from email import encoders\n",
     "from os.path import basename\n",
@@ -48,11 +49,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "\n",
+    "\n",
+    "def format_date_column(serie):\n",
+    "    format_date = []\n",
+    "    for index, value in serie.iteritems():\n",
+    "        if type(value) != datetime and type(value) != Timestamp:  \n",
+    "            if type(value) == float:\n",
+    "                value = datetime.strptime('1900-1-1 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
+    "                format_date.append(value)\n",
+    "            else: \n",
+    "                value = datetime.strptime('1950-2-2 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
+    "                format_date.append(value)\n",
+    "        else:\n",
+    "            value = datetime.strptime(str(value), '%Y-%m-%d %H:%M:%S')\n",
+    "            format_date.append(value)\n",
+    "    \n",
+    "    return format_date\n",
+    "    \n"
    ]
   },
   {
@@ -60,7 +78,112 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#for a, b in ca['Date Scheduled'].iteritems():\n",
+    "#    if type(b) != float and type(b) != datetime:\n",
+    "#        print(b)\n",
+    "#        print(type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ca['PAR Requested'] = format_date_column(ca['PAR Requested'])\n",
+    "#ca['Date First Contact'] = format_date_column(ca['Date First Contact'])\n",
+    "#ca['PAR Received'] = format_date_column(ca['PAR Received'])\n",
+    "#ca['Date Analysis'] = format_date_column(ca['Date Analysis'])\n",
+    "#ca['Date Invite Sent'] = format_date_column(ca['Date Analysis'])\n",
+    "#ca['Date Scheduled'] = format_date_column(ca['Date Scheduled'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Compare column R-W"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "equality_relation = ca[['Request ID', 'Sav ID','Coverage Advisor','PAR Requested','Date First Contact','PAR Received','Date Analysis','Date Invite Sent','Date Scheduled']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "equality_relation['PAR Requested'] = format_date_column(equality_relation['PAR Requested'])\n",
+    "equality_relation['Date First Contact'] = format_date_column(equality_relation['Date First Contact'])\n",
+    "equality_relation['PAR Received'] = format_date_column(equality_relation['PAR Received'])\n",
+    "equality_relation['Date Analysis'] = format_date_column(equality_relation['Date Analysis'])\n",
+    "equality_relation['Date Invite Sent'] = format_date_column(equality_relation['Date Analysis'])\n",
+    "equality_relation['Date Scheduled'] = format_date_column(equality_relation['Date Scheduled'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "equality_relation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "equality_relation['R_less_S'] = int(0)\n",
+    "equality_relation['S_less_T'] = int(0)\n",
+    "equality_relation['T_less_U'] = int(0)\n",
+    "equality_relation['U_less_V'] = int(0)\n",
+    "equality_relation['V_less_W'] = int(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, value in equality_relation.iterrows():\n",
+    "    if value['PAR Requested'] > value['Date First Contact']:\n",
+    "        equality_relation['R_less_S'].iloc[i] = 1\n",
+    "\n",
+    "    if value['Date First Contact'] > value['PAR Received']:\n",
+    "       equality_relation['S_less_T'].iloc[i] = 1  \n",
+    "\n",
+    "    if value['PAR Received'] > value['Date Analysis']:\n",
+    "        equality_relation['T_less_U'].iloc[i] = 1  \n",
+    "\n",
+    "    if value['Date Analysis'] > value['Date Invite Sent']:\n",
+    "        equality_relation['U_less_V'].iloc[i] = 1  \n",
+    "\n",
+    "    if value['Date Invite Sent'] > value['Date Scheduled']:\n",
+    "        equality_relation['V_less_W'].iloc[i] = 1  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "equality_relation.to_excel('test.xlsx')"
+   ]
   }
  ],
  "metadata": {
@@ -82,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
