--- a/main.ipynb
+++ b/main.ipynb
@@ -49,7 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for i, j in ca['PAR Received'].iteritems():\n",
+    "#    print(str(j) + '/// '+str(type(j)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,10 +70,10 @@
     "    for index, value in serie.iteritems():\n",
     "        if type(value) != datetime and type(value) != Timestamp:  \n",
     "            if type(value) == float:\n",
-    "                value = datetime.strptime('1900-1-1 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
+    "                value = datetime.strptime('2030-2-2 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
     "                format_date.append(value)\n",
     "            else: \n",
-    "                value = datetime.strptime('1950-2-2 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
+    "                value = datetime.strptime('2050-2-2 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
     "                format_date.append(value)\n",
     "        else:\n",
     "            value = datetime.strptime(str(value), '%Y-%m-%d %H:%M:%S')\n",
@@ -71,32 +81,6 @@
     "    \n",
     "    return format_date\n",
     "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#for a, b in ca['Date Scheduled'].iteritems():\n",
-    "#    if type(b) != float and type(b) != datetime:\n",
-    "#        print(b)\n",
-    "#        print(type(b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#ca['PAR Requested'] = format_date_column(ca['PAR Requested'])\n",
-    "#ca['Date First Contact'] = format_date_column(ca['Date First Contact'])\n",
-    "#ca['PAR Received'] = format_date_column(ca['PAR Received'])\n",
-    "#ca['Date Analysis'] = format_date_column(ca['Date Analysis'])\n",
-    "#ca['Date Invite Sent'] = format_date_column(ca['Date Analysis'])\n",
-    "#ca['Date Scheduled'] = format_date_column(ca['Date Scheduled'])"
    ]
   },
   {
@@ -137,15 +121,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "equality_relation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "equality_relation['R_less_S'] = int(0)\n",
     "equality_relation['S_less_T'] = int(0)\n",
     "equality_relation['T_less_U'] = int(0)\n",
@@ -161,19 +136,73 @@
    "source": [
     "for i, value in equality_relation.iterrows():\n",
     "    if value['PAR Requested'] > value['Date First Contact']:\n",
-    "        equality_relation['R_less_S'].iloc[i] = 1\n",
+    "        if value['PAR Requested'] == Timestamp('2030-2-2 00:00:00') or value['PAR Requested'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "            equality_relation['R_less_S'].iloc[i] = 0\n",
+    "        else:\n",
+    "            equality_relation['R_less_S'].iloc[i] = 1\n",
     "\n",
     "    if value['Date First Contact'] > value['PAR Received']:\n",
-    "       equality_relation['S_less_T'].iloc[i] = 1  \n",
+    "        if value['Date First Contact'] == Timestamp('2030-2-2 00:00:00') or value['Date First Contact'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "            equality_relation['S_less_T'].iloc[i] = 0\n",
+    "        else:\n",
+    "            equality_relation['S_less_T'].iloc[i] = 1  \n",
     "\n",
     "    if value['PAR Received'] > value['Date Analysis']:\n",
-    "        equality_relation['T_less_U'].iloc[i] = 1  \n",
+    "        if value['PAR Received'] == Timestamp('2030-2-2 00:00:00') or value['PAR Received'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "            equality_relation['T_less_U'].iloc[i] = 0  \n",
+    "        else:\n",
+    "            equality_relation['T_less_U'].iloc[i] = 1\n",
     "\n",
     "    if value['Date Analysis'] > value['Date Invite Sent']:\n",
-    "        equality_relation['U_less_V'].iloc[i] = 1  \n",
+    "        if value['Date Analysis'] == Timestamp('2030-2-2 00:00:00') or value['Date Analysis'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "            equality_relation['U_less_V'].iloc[i] = 0\n",
+    "        else:\n",
+    "            equality_relation['U_less_V'].iloc[i] = 1        \n",
     "\n",
     "    if value['Date Invite Sent'] > value['Date Scheduled']:\n",
-    "        equality_relation['V_less_W'].iloc[i] = 1  "
+    "        if value['Date Invite Sent'] == Timestamp('2030-2-2 00:00:00') or value['Date Invite Sent'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "            equality_relation['V_less_W'].iloc[i] = 0\n",
+    "        else: \n",
+    "            equality_relation['V_less_W'].iloc[i] = 1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, val in equality_relation.iterrows():\n",
+    "\n",
+    "    if val['PAR Requested'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "        equality_relation['PAR Requested'].iloc[i] = 'Format Error'\n",
+    "    else:\n",
+    "        equality_relation['PAR Requested'].iloc[i] = ' '\n",
+    "\n",
+    "    if val['Date First Contact'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "        equality_relation['Date First Contact'].iloc[i] = 'Format Error'\n",
+    "    else:\n",
+    "        equality_relation['Date First Contact'].iloc[i] = ' '\n",
+    "    \n",
+    "    if val['PAR Received'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "        equality_relation['PAR Received'].iloc[i] = 'Format Error'\n",
+    "    else:\n",
+    "        equality_relation['PAR Received'].iloc[i] = ' '\n",
+    "\n",
+    "    if val['Date Analysis'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "        equality_relation['Date Analysis'].iloc[i] = 'Format Error'\n",
+    "    else:\n",
+    "        equality_relation['Date Analysis'].iloc[i] = ' '\n",
+    "    \n",
+    "    if val['Date Invite Sent'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "        equality_relation['Date Invite Sent'].iloc[i] = 'Format Error'\n",
+    "    else:\n",
+    "        equality_relation['Date Invite Sent'].iloc[i] = ' '\n",
+    "    \n",
+    "    if val['Date Scheduled'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "        equality_relation['Date Scheduled'].iloc[i] = 'Format Error'\n",
+    "    else:\n",
+    "        equality_relation['Date Scheduled'].iloc[i] = ' '\n"
    ]
   },
   {
@@ -184,6 +213,13 @@
    "source": [
     "equality_relation.to_excel('test.xlsx')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
