code corrections in uniqual relation

--- a/main.ipynb
+++ b/main.ipynb
@@ -69,7 +69,7 @@
     "    format_date = []\n",
     "    for index, value in serie.iteritems():\n",
     "        if type(value) != datetime and type(value) != Timestamp:  \n",
-    "            if type(value) == float:\n",
+    "            if type(value) == float or value != value:\n",
     "                value = datetime.strptime('2030-2-2 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
     "                format_date.append(value)\n",
     "            else: \n",
@@ -84,12 +84,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Compare column R-W"
+    "### Compare column R-W"
    ]
   },
   {
@@ -98,7 +96,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "equality_relation = ca[['Request ID', 'Sav ID','Coverage Advisor','PAR Requested','Date First Contact','PAR Received','Date Analysis','Date Invite Sent','Date Scheduled']]"
+    "equality_relation = ca[['Request ID','PAR Requested','Date First Contact','PAR Received','Date Analysis','Date Invite Sent','Date Scheduled']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for i, j in equality_relation['Date Analysis'].iteritems():\n",
+    "#    print(str(j) + '/// '+str(type(j)))"
    ]
   },
   {
@@ -212,6 +220,13 @@
    "outputs": [],
    "source": [
     "equality_relation.to_excel('test.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Familiar Relation"
    ]
   },
   {
