several variables added

--- a/main.ipynb
+++ b/main.ipynb
@@ -214,19 +214,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Familiar Relation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "equality_relation.to_excel('test.xlsx')"
+    "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx')"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Familiar Relation"
+    "\n",
+    "familiar_relation = ca[['Request ID','Account Stage','Status','Reason Declined','Pre-Readout Effort (min)','Readout Duration (min)','Follow Up Effort (min)']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "familiar_relation['Error relation X,Y columns'] = ' '\n",
+    "familiar_relation['Error Reason Declined'] = ' '\n",
+    "familiar_relation['Pre-ReadOut Empty'] = ' '\n",
+    "familiar_relation['Empty values in AB and AC'] = ' '\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "familiar_relation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, status in familiar_relation.iterrows():\n",
+    "    if type(status['Account Stage']) != float and type(status['Status']) != float:\n",
+    "        if status['Status'][0] != status['Account Stage'][0]:\n",
+    "            familiar_relation['Error relation X,Y columns'].iloc[index] = 'Error'\n",
+    "        else:\n",
+    "            if status['Account Stage'][0] == 'E' and status['Status'][2]== 'D' and type(status['Reason Declined']) == float:\n",
+    "                familiar_relation['Error Reason Declined'].iloc[index] = 'Error'\n",
+    "        \n",
+    "    if type(status['Pre-Readout Effort (min)']) != int:\n",
+    "        if type(status['Pre-Readout Effort (min)']) == float:\n",
+    "            if type(status['Status']) != float:\n",
+    "                if status['Status'][2] != 'U':\n",
+    "                    familiar_relation['Pre-ReadOut Empty'].iloc[index] = 'Error'\n",
+    "\n",
+    "    if type(status['Account Stage']) != float:\n",
+    "        if status['Account Stage'][0] == 'F' and (type(status['Readout Duration (min)']) == float or type(status['Follow Up Effort (min)']) == float):\n",
+    "            familiar_relation['Empty values in AB and AC'].iloc[index] = 'Error'\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "familiar_relation[familiar_relation['Empty values in AB and AC'] == 'Error']"
    ]
   },
   {
