validation in column R to AA

--- a/main.ipynb
+++ b/main.ipynb
@@ -226,15 +226,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\n",
     "familiar_relation = ca[['Request ID','Account Stage','Status','Reason Declined','Pre-Readout Effort (min)','Readout Duration (min)','Follow Up Effort (min)']]"
    ]
@@ -250,15 +241,6 @@
     "familiar_relation['Pre-ReadOut Empty'] = ' '\n",
     "familiar_relation['Empty values in AB and AC'] = ' '\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "familiar_relation"
    ]
   },
   {
@@ -295,15 +277,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "familiar_relation[familiar_relation['Empty values in AB and AC'] == 'Error']"
+    "familiar_relation = familiar_relation.drop('Account Stage', axis=1)\n",
+    "familiar_relation = familiar_relation.drop('Status', axis=1)\n",
+    "familiar_relation = familiar_relation.drop('Reason Declined', axis=1)\n",
+    "familiar_relation = familiar_relation.drop('Pre-Readout Effort (min)', axis=1)\n",
+    "familiar_relation = familiar_relation.drop('Readout Duration (min)', axis=1)\n",
+    "familiar_relation = familiar_relation.drop('Follow Up Effort (min)', axis=1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
