--- a/main.ipynb
+++ b/main.ipynb
@@ -87,6 +87,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Celdas vacías"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Aqui va el codigo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Compare column R-W"
    ]
   },
