removed the CA visualization in my branch

--- a/main.ipynb
+++ b/main.ipynb
@@ -464,8 +464,7 @@
     "#import data with the users mails\n",
     "p = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/CAB%20Trackers/Coverage%20Advisor%20Tracker%20OFICIAL.xlsx\"\\\n",
     "    ,filename = 'Coverage Advisor Tracker OFICIAL.xlsx')\n",
-    "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx')\n",
-    "ca"
+    "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx')"
    ]
   },
   {
