--- a/main.ipynb
+++ b/main.ipynb
@@ -306,68 +306,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "familiar_relation2 = ca[[\"Follow Up 1\",\"Follow Up 2\",\"Follow Up 3\",\"Closed Date\",]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "familiar_relation2['Follow Up 1'] = ' '\n",
-    "familiar_relation2['Follow Up 2'] = ' '\n",
-    "familiar_relation2['Follow Up 3'] = ' '\n",
-    "familiar_relation2['Closed Date'] = ' '\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for index, followUp1 in familiar_relation2.iterrows():\n",
-    "    if type(followUp1['Follow Up 1']) != float and type(followUp1['Follow Up 2']) != float:\n",
-    "        if followUp1['Follow Up 1'][0] != followUp1['Follow Up 2'][0]:\n",
-    "            familiar_relation2['Error relation X,Y columns'].iloc[index] = 'Error'\n",
-    "        else:\n",
-    "            if followUp1['Account Stage'][0] == 'E' and followUp1['Status'][2]== 'D' and type(followUp1['Reason Declined']) == float:\n",
-    "                followUp1['Error Reason Declined'].iloc[index] = 'Error'\n",
-    "        \n",
-    "    if type(followUp1['Pre-Readout Effort (min)']) != int:\n",
-    "        if type(followUp1['Pre-Readout Effort (min)']) == float:\n",
-    "            if type(followUp1['Status']) != float:\n",
-    "                if followUp1['Status'][2] != 'U':\n",
-    "                    familiar_relation2['Pre-ReadOut Empty'].iloc[index] = 'Error'\n",
-    "\n",
-    "    if type(followUp1['Account Stage']) != float:\n",
-    "        if followUp1['Account Stage'][0] == 'F' and (type(followUp1['Readout Duration (min)']) == float or type(followUp1['Follow Up Effort (min)']) == float):\n",
-    "            familiar_relation2['Empty values in AB and AC'].iloc[index] = 'Error'\n",
-    "\n",
-    "\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "familiar_relation2 = familiar_relation2.drop('Follow Up 1', axis=1)\n",
-    "familiar_relation2 = familiar_relation2.drop('Follow Up 2', axis=1)\n",
-    "familiar_relation2 = familiar_relation2.drop('Follow Up 3', axis=1)\n",
-    "familiar_relation2 = familiar_relation2.drop('Closed Date ', axis=1)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -380,7 +318,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "equality_relation2 = ca[['Follow Up 1','Follow Up 2','Follow Up 3','Closed Date']]"
+    "cov = ca[['Follow Up 1','Follow Up 2','Follow Up 3','Closed Date']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "equality_relation2 = cov.copy()"
    ]
   },
   {
@@ -399,10 +346,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "equality_relation2['Follow Up 1'] = format_date_column(equality_relation['Follow Up 1'])\n",
-    "equality_relation2['Follow Up 2'] = format_date_column(equality_relation['Follow Up 2'])\n",
-    "equality_relation2['Follow Up 3'] = format_date_column(equality_relation['Follow Up 3'])\n",
-    "equality_relation2['Closed Date'] = format_date_column(equality_relation['Closed Date'])"
+    "equality_relation2['Follow Up 1'] = format_date_column(equality_relation2['Follow Up 1'])\n",
+    "equality_relation2['Follow Up 2'] = format_date_column(equality_relation2['Follow Up 2'])\n",
+    "equality_relation2['Follow Up 3'] = format_date_column(equality_relation2['Follow Up 3'])\n",
+    "equality_relation2['Closed Date'] = format_date_column(equality_relation2['Closed Date'])"
    ]
   },
   {
@@ -427,19 +374,19 @@
     "        if value['Follow Up 1'] == Timestamp('2030-2-2 00:00:00') or value['Follow Up 1'] == Timestamp('2050-2-2 00:00:00'):\n",
     "            equality_relation2['AI_less_AJ'].iloc[i] = 0\n",
     "        else:\n",
-    "            equality_relation['AI_less_AJ'].iloc[i] = 1\n",
+    "            equality_relation2['AI_less_AJ'].iloc[i] = 1\n",
     "\n",
     "    if value['Follow Up 2'] > value['Follow Up 3']:\n",
     "        if value['Follow Up 2'] == Timestamp('2030-2-2 00:00:00') or value['Follow Up 2'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "            equality_relation['AJ_less_AK'].iloc[i] = 0\n",
+    "            equality_relation2['AJ_less_AK'].iloc[i] = 0\n",
     "        else:\n",
-    "            equality_relation['AJ_less_AK'].iloc[i] = 1  \n",
+    "            equality_relation2['AJ_less_AK'].iloc[i] = 1  \n",
     "\n",
     "    if value['Follow Up 3'] > value['Closed Date']:\n",
     "        if value['Follow Up 3'] == Timestamp('2030-2-2 00:00:00') or value['Follow Up 3'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "            equality_relation['AK_less_AL'].iloc[i] = 0  \n",
+    "            equality_relation2['AK_less_AL'].iloc[i] = 0  \n",
     "        else:\n",
-    "            equality_relation['AK_less_AL'].iloc[i] = 1"
+    "            equality_relation2['AK_less_AL'].iloc[i] = 1"
    ]
   },
   {
@@ -448,29 +395,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, val in equality_relation.iterrows():\n",
+    "for i, val in equality_relation2.iterrows():\n",
     "\n",
     "    if val['Follow Up 1'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "        equality_relation['Follow Up 1'].iloc[i] = 'Format Error'\n",
+    "        equality_relation2['Follow Up 1'].iloc[i] = 'Format Error'\n",
     "    else:\n",
-    "        equality_relation['Follow Up 1'].iloc[i] = ' '\n",
+    "        equality_relation2['Follow Up 1'].iloc[i] = ' '\n",
     "\n",
     "    if val['Follow Up 2'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "        equality_relation['Follow Up 2'].iloc[i] = 'Format Error'\n",
+    "        equality_relation2['Follow Up 2'].iloc[i] = 'Format Error'\n",
     "    else:\n",
-    "        equality_relation['Follow Up 2'].iloc[i] = ' '\n",
+    "        equality_relation2['Follow Up 2'].iloc[i] = ' '\n",
     "    \n",
     "    if val['Follow Up 3'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "        equality_relation['Follow Up 3'].iloc[i] = 'Format Error'\n",
+    "        equality_relation2['Follow Up 3'].iloc[i] = 'Format Error'\n",
     "    else:\n",
-    "        equality_relation['Follow Up 3'].iloc[i] = ' '\n",
+    "        equality_relation2['Follow Up 3'].iloc[i] = ' '\n",
     "\n",
     "    if val['Closed Date'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "        equality_relation['Closed Date'].iloc[i] = 'Format Error'\n",
+    "        equality_relation2['Closed Date'].iloc[i] = 'Format Error'\n",
     "    else:\n",
-    "        equality_relation['Closed Date'].iloc[i] = ' '\n",
+    "        equality_relation2['Closed Date'].iloc[i] = ' '\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
