--- a/main.ipynb
+++ b/main.ipynb
@@ -52,7 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mail = pd.read_excel('coverage_mails.xlsx')"
+    "m = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/coverage_mails.xlsx\"\\\n",
+    "    ,filename = 'coverage_mails.xlsx')\n",
+    "mail = pd.read_excel('coverage_mails.xlsx')"
    ]
   },
   {
@@ -122,10 +124,12 @@
    "outputs": [],
    "source": [
     "#Recorrido de celdas buscando valores vacios en columnas G H I J  AF/AG/AH AM AN AO\n",
-    "Empty_Errors  = ca[\n",
+    "Empty  = ca[\n",
     "    (ca['Request Type'].isna() == True) | (ca['Join Call'].isna() == True)\n",
     "    | (ca['Sav ID'].isna() == True) | (ca['Upcoming Renewal'].isna() == True) | (ca['CA Name'].isna() == True) | (ca['Expired Opportunity'].isna() == True)\n",
-    "    | (ca['LDoS Opportunity'].isna() == True) | (ca['Next steps'].isna() == True) | (ca['DID'].isna() == True) | (ca['Link PAR IB Rep'].isna() == True)]"
+    "    | (ca['LDoS Opportunity'].isna() == True) | (ca['Next steps'].isna() == True) | (ca['DID'].isna() == True) | (ca['Link PAR IB Rep'].isna() == True)]\n",
+    "\n",
+    "Empty_Errors = Empty.copy()"
    ]
   },
   {
@@ -135,7 +139,21 @@
    "outputs": [],
    "source": [
     "Empty_Errors = Empty_Errors[['Request ID','Request Type','Join Call','Sav ID', 'Upcoming Renewal','CA Name', 'Expired Opportunity','LDoS Opportunity', 'Next steps','DID','Link PAR IB Rep']]\n",
-    "Empty_Errors = Empty_Errors.fillna('Empty')"
+    "Empty_Errors = Empty_Errors.fillna('Empty')\n",
+    "Empty_Errors = Empty_Errors.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, row in Empty_Errors.iterrows():\n",
+    "    for loc, sheet in row.items():\n",
+    "        if sheet != 'Empty':\n",
+    "            if loc != 'Request ID':\n",
+    "                Empty_Errors[loc].loc[index] = None"
    ]
   },
   {
@@ -353,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cov = ca[['Follow Up 1','Follow Up 2','Follow Up 3','Closed Date']]"
+    "cov = ca[['Request ID','Follow Up 1','Follow Up 2','Follow Up 3','Closed Date']]"
    ]
   },
   {
@@ -363,16 +381,6 @@
    "outputs": [],
    "source": [
     "equality_relation2 = cov.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#for i, j in equality_relation['Date Analysis'].iteritems():\n",
-    "#    print(str(j) + '/// '+str(type(j)))"
    ]
   },
   {
@@ -393,9 +401,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "equality_relation2['AI_less_AJ'] = int(0)\n",
-    "equality_relation2['AJ_less_AK'] = int(0)\n",
-    "equality_relation2['AK_less_AL'] = int(0)"
+    "equality_relation2['AI_less_AJ'] = None\n",
+    "equality_relation2['AJ_less_AK'] = None\n",
+    "equality_relation2['AK_less_AL'] = None"
    ]
   },
   {
@@ -407,21 +415,21 @@
     "for i, value in equality_relation2.iterrows():\n",
     "    if value['Follow Up 1'] > value['Follow Up 2']:\n",
     "        if value['Follow Up 1'] == Timestamp('2030-2-2 00:00:00') or value['Follow Up 1'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "            equality_relation2['AI_less_AJ'].iloc[i] = 0\n",
+    "            equality_relation2['AI_less_AJ'].loc[i] = None\n",
     "        else:\n",
-    "            equality_relation2['AI_less_AJ'].iloc[i] = 1\n",
+    "            equality_relation2['AI_less_AJ'].loc[i] = 'X'\n",
     "\n",
     "    if value['Follow Up 2'] > value['Follow Up 3']:\n",
     "        if value['Follow Up 2'] == Timestamp('2030-2-2 00:00:00') or value['Follow Up 2'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "            equality_relation2['AJ_less_AK'].iloc[i] = 0\n",
+    "            equality_relation2['AJ_less_AK'].loc[i] = None\n",
     "        else:\n",
-    "            equality_relation2['AJ_less_AK'].iloc[i] = 1  \n",
+    "            equality_relation2['AJ_less_AK'].loc[i] = 'X'  \n",
     "\n",
     "    if value['Follow Up 3'] > value['Closed Date']:\n",
     "        if value['Follow Up 3'] == Timestamp('2030-2-2 00:00:00') or value['Follow Up 3'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "            equality_relation2['AK_less_AL'].iloc[i] = 0  \n",
+    "            equality_relation2['AK_less_AL'].loc[i] = None  \n",
     "        else:\n",
-    "            equality_relation2['AK_less_AL'].iloc[i] = 1"
+    "            equality_relation2['AK_less_AL'].loc[i] = 'X'"
    ]
   },
   {
@@ -433,24 +441,24 @@
     "for i, val in equality_relation2.iterrows():\n",
     "\n",
     "    if val['Follow Up 1'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "        equality_relation2['Follow Up 1'].iloc[i] = 'Format Error'\n",
+    "        equality_relation2['Follow Up 1'].loc[i] = 'Format Error'\n",
     "    else:\n",
-    "        equality_relation2['Follow Up 1'].iloc[i] = ' '\n",
+    "        equality_relation2['Follow Up 1'].loc[i] = None\n",
     "\n",
     "    if val['Follow Up 2'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "        equality_relation2['Follow Up 2'].iloc[i] = 'Format Error'\n",
+    "        equality_relation2['Follow Up 2'].loc[i] = 'Format Error'\n",
     "    else:\n",
-    "        equality_relation2['Follow Up 2'].iloc[i] = ' '\n",
+    "        equality_relation2['Follow Up 2'].loc[i] = None\n",
     "    \n",
     "    if val['Follow Up 3'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "        equality_relation2['Follow Up 3'].iloc[i] = 'Format Error'\n",
+    "        equality_relation2['Follow Up 3'].loc[i] = 'Format Error'\n",
     "    else:\n",
-    "        equality_relation2['Follow Up 3'].iloc[i] = ' '\n",
+    "        equality_relation2['Follow Up 3'].loc[i] = None\n",
     "\n",
     "    if val['Closed Date'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "        equality_relation2['Closed Date'].iloc[i] = 'Format Error'\n",
+    "        equality_relation2['Closed Date'].loc[i] = 'Format Error'\n",
     "    else:\n",
-    "        equality_relation2['Closed Date'].iloc[i] = ' '\n",
+    "        equality_relation2['Closed Date'].loc[i] = None\n",
     "    "
    ]
   },
@@ -468,20 +476,10 @@
    "outputs": [],
    "source": [
     "new_table = equality_relation.merge(familiar_relation, how='left', left_on='Request ID', right_on='Request ID').merge(    \n",
-    "            Empty_Errors, how='left', left_on='Request ID', right_on='Request ID')\n",
-    "\n",
-    "\n",
+    "            Empty_Errors, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            equality_relation2, how='left', left_on='Request ID', right_on='Request ID')\n",
     "new_table.dropna(axis=0, how='all', subset=new_table.columns[2:], inplace=True)      \n",
     "new_table.to_excel('error_report_%s.xlsx' % today)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_table"
    ]
   },
   {
@@ -493,15 +491,6 @@
     "mail_table = new_table.drop(columns=new_table.columns[2:])\n",
     "mail_table = mail_table['Coverage Advisor'].to_frame().drop_duplicates().reset_index(drop=True)\n",
     "mail_table = mail_table.merge(mail, how='left', left_on='Coverage Advisor', right_on='Coverage Advisor')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mail_table"
    ]
   },
   {
@@ -560,9 +549,11 @@
    "outputs": [],
    "source": [
     "#for i, sheet in mail_table.iterrows():\n",
-    " #   send_msg(sheet['Mail'], myMail, subjectEmail , msg1, True)\n",
+    "#    if pd.isnull(sheet['Email']) == False:\n",
+    "#        send_msg(sheet['Email'], myMail, subjectEmail , msg1, True)\n",
+    "#        print(sheet['Email'])\n",
     "\n",
-    "send_msg('jonnathan.neira@nub78.com', myMail, subjectEmail , msg1, True)"
+    "send_msg('nicolas.rodriguez@nub78.com', myMail, subjectEmail , msg1, True)"
    ]
   },
   {
