corrections and added format excel

--- a/main.ipynb
+++ b/main.ipynb
@@ -25,6 +25,7 @@
     "import pandas as pd\n",
     "from datetime import datetime, timedelta\n",
     "from pandas import Timestamp\n",
+    "import excel_formating\n",
     "\n",
     "from email import encoders\n",
     "from os.path import basename\n",
@@ -490,7 +491,9 @@
     "            Empty_Errors, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
     "            equality_relation2, how='left', left_on='Request ID', right_on='Request ID')\n",
     "new_table.dropna(axis=0, how='all', subset=new_table.columns[2:], inplace=True)      \n",
-    "new_table.to_excel('error_report_%s.xlsx' % today)"
+    "new_table.to_excel('error_report_%s.xlsx' % today)\n",
+    "\n",
+    "excel_formating.format_excel()"
    ]
   },
   {
