pre-final version

--- a/main.ipynb
+++ b/main.ipynb
@@ -290,15 +290,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "equality_relation"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -563,12 +554,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#for i, sheet in mail_table.iterrows():\n",
-    "#    if pd.isnull(sheet['Email']) == False:\n",
-    "#        send_msg(sheet['Email'], myMail, subjectEmail , msg1, True)\n",
-    "#        print(sheet['Email'])\n",
-    "\n",
-    "send_msg('nicolas.rodriguez@nub78.com', myMail, subjectEmail , msg1, True)"
+    "for i, sheet in mail_table.iterrows():\n",
+    "    if pd.isnull(sheet['Email']) == False:\n",
+    "        send_msg(sheet['Email'], myMail, subjectEmail , msg1, True)\n",
+    "        print(sheet['Email'])"
    ]
   },
   {
