correction in fourth validation

--- a/main.ipynb
+++ b/main.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,8 @@
    "outputs": [],
    "source": [
     "#import data with the users mails\n",
-    "p = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/CAB%20Trackers/Coverage%20Advisor%20Tracker%20OFICIAL.xlsx\"\\\n",
-    "    ,filename = 'Coverage Advisor Tracker OFICIAL.xlsx')\n",
+    "#p = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/CAB%20Trackers/Coverage%20Advisor%20Tracker%20OFICIAL.xlsx\"\\\n",
+    "#    ,filename = 'Coverage Advisor Tracker OFICIAL.xlsx')\n",
     "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx')\n",
     "ca.dropna(axis=0, subset=['Request ID'], inplace=True)"
    ]
@@ -334,21 +334,21 @@
    "outputs": [],
    "source": [
     "for index, status in familiar_relation.iterrows():\n",
-    "    if type(status['Account Stage']) != float and type(status['Status']) != float:\n",
+    "    if pd.isnull(status['Account Stage']) == False and pd.isnull(status['Status']) == False:\n",
     "        if status['Status'][0] != status['Account Stage'][0]:\n",
     "            familiar_relation['Error relation Account Stage, Status columns'].loc[index] = 'Error'\n",
     "        else:\n",
-    "            if status['Account Stage'][0] == 'E' and status['Status'][2]== 'D' and type(status['Reason Declined']) == float:\n",
+    "            if status['Account Stage'][0] == 'E' and status['Status'][2]== 'D' and pd.isnull(status['Reason Declined']) == True:\n",
     "                familiar_relation['Error Reason Declined'].loc[index] = 'Error'\n",
     "        \n",
     "    if type(status['Pre-Readout Effort (min)']) != int:\n",
-    "        if type(status['Pre-Readout Effort (min)']) == float:\n",
-    "            if type(status['Status']) != float:\n",
+    "        if pd.isnull(status['Pre-Readout Effort (min)']) == True:\n",
+    "            if pd.isnull(status['Status']) == False:\n",
     "                if status['Status'][2] != 'U':\n",
     "                    familiar_relation['Pre-ReadOut Empty'].loc[index] = 'Error'\n",
     "\n",
-    "    if type(status['Account Stage']) != float:\n",
-    "        if status['Account Stage'][0] == 'F' and (type(status['Readout Duration (min)']) == float or type(status['Follow Up Effort (min)']) == float):\n",
+    "    if pd.isnull(status['Account Stage']) == False:\n",
+    "        if status['Account Stage'][0] == 'F' and (pd.isnull(status['Readout Duration (min)']) == True or pd.isnull(status['Follow Up Effort (min)']) == True):\n",
     "            familiar_relation['Empty values in Readout Duration and Follow Up Effort'].loc[index] = 'Error'   "
    ]
   },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
