Request Type Column Validation

--- a/main.ipynb
+++ b/main.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,8 @@
    "outputs": [],
    "source": [
     "#import data with the users mails\n",
-    "#p = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/CAB%20Trackers/Coverage%20Advisor%20Tracker%20OFICIAL.xlsx\"\\\n",
-    "#    ,filename = 'Coverage Advisor Tracker OFICIAL.xlsx')\n",
+    "p = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/CAB%20Trackers/Coverage%20Advisor%20Tracker%20OFICIAL.xlsx\"\\\n",
+    "    ,filename = 'Coverage Advisor Tracker OFICIAL.xlsx')\n",
     "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx')\n",
     "ca.dropna(axis=0, subset=['Request ID'], inplace=True)"
    ]
@@ -100,6 +100,43 @@
     "    return format_date\n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx')\n",
+    "ca.dropna(axis=0, subset=['Account'], inplace=True)\n",
+    "ca.drop(list(ca[ca['Account']==0].index), axis=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Request Type\n",
+    "\n",
+    "request_id = ca[['Request ID', 'Request Type']].copy()\n",
+    "\n",
+    "for i, row in request_id.iterrows():\n",
+    "    if pd.isnull(row['Request Type']) == True:\n",
+    "        request_id['Request Type'].loc[i] = 'Request Type Empty'\n",
+    "    else:\n",
+    "        request_id['Request Type'].loc[i] = None\n",
+    "\n",
+    "request_id.dropna(axis=0, subset=['Request Type'], inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -474,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
