Join Call validation Added

--- a/main.ipynb
+++ b/main.ipynb
@@ -44,7 +44,8 @@
     "p = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/CAB%20Trackers/Coverage%20Advisor%20Tracker%20OFICIAL.xlsx\"\\\n",
     "    ,filename = 'Coverage Advisor Tracker OFICIAL.xlsx')\n",
     "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx')\n",
-    "ca.dropna(axis=0, subset=['Request ID'], inplace=True)"
+    "ca.dropna(axis=0, subset=['Account'], inplace=True)\n",
+    "ca.drop(list(ca[ca['Account']==0].index), axis=0, inplace=True)"
    ]
   },
   {
@@ -107,6 +108,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Request Type\n",
+    "\n",
+    "request_type = ca[['Request ID', 'Request Type']].copy()\n",
+    "\n",
+    "for i, row in request_type.iterrows():\n",
+    "    if pd.isnull(row['Request Type']) == True:\n",
+    "        request_type['Request Type'].loc[i] = 'Request Type Empty'\n",
+    "    else:\n",
+    "        request_type['Request Type'].loc[i] = None\n",
+    "\n",
+    "request_type.dropna(axis=0, subset=['Request Type'], inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Join Call\n",
+    "\n",
+    "join_call = ca[['Request ID', 'Join Call']].copy()\n",
+    "\n",
+    "for i, row in join_call.iterrows():\n",
+    "    if pd.isnull(row['Join Call']) == True:\n",
+    "        join_call['Join Call'].loc[i] = 'Join Call Empty'\n",
+    "    else:\n",
+    "        join_call['Join Call'].loc[i] = None\n",
+    "\n",
+    "join_call.dropna(axis=0, subset=['Join Call'], inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx')\n",
     "ca.dropna(axis=0, subset=['Account'], inplace=True)\n",
     "ca.drop(list(ca[ca['Account']==0].index), axis=0, inplace=True)"
@@ -118,25 +157,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Request Type\n",
-    "\n",
-    "request_id = ca[['Request ID', 'Request Type']].copy()\n",
-    "\n",
-    "for i, row in request_id.iterrows():\n",
-    "    if pd.isnull(row['Request Type']) == True:\n",
-    "        request_id['Request Type'].loc[i] = 'Request Type Empty'\n",
-    "    else:\n",
-    "        request_id['Request Type'].loc[i] = None\n",
-    "\n",
-    "request_id.dropna(axis=0, subset=['Request Type'], inplace=True)\n"
+    "# Upcoming Renewal"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
