Upcoming Renewal validation column added.
1 - It's count the number of character on the cell to determine if there
  are spaces.

--- a/main.ipynb
+++ b/main.ipynb
@@ -146,9 +146,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx')\n",
-    "ca.dropna(axis=0, subset=['Account'], inplace=True)\n",
-    "ca.drop(list(ca[ca['Account']==0].index), axis=0, inplace=True)"
+    "# Upcoming Renewal\n",
+    "upcoming_renewal = ca[['Request ID', 'Upcoming Renewal']].copy()\n",
+    "\n",
+    "for index, row in upcoming_renewal.iterrows():\n",
+    "    if pd.isna(row['Upcoming Renewal']) == True:\n",
+    "        upcoming_renewal['Upcoming Renewal'].loc[index] = 'Empty Value'\n",
+    "    elif len(row['Upcoming Renewal']) > 6:v\n",
+    "        upcoming_renewal['Upcoming Renewal'].loc[index] = 'Value with space'\n",
+    "    else:    \n",
+    "        upcoming_renewal['Upcoming Renewal'].loc[index] = None\n",
+    "\n",
+    "upcoming_renewal.dropna(axis=0, subset=['Upcoming Renewal'], inplace=True)\n"
    ]
   },
   {
@@ -157,7 +166,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Upcoming Renewal"
+    "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx')\n",
+    "ca.dropna(axis=0, subset=['Account'], inplace=True)\n",
+    "ca.drop(list(ca[ca['Account']==0].index), axis=0, inplace=True)"
    ]
   },
   {
