Date Received Added

--- a/main.ipynb
+++ b/main.ipynb
@@ -172,6 +172,145 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Date Received\n",
+    "\n",
+    "date_received = ca[['Request ID', 'Date received']].copy()\n",
+    "date_received['Date received'] = format_date_column(date_received['Date received'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, row in date_received.iterrows():\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Request ID</th>\n",
+       "      <th>Date received</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>103120.0</td>\n",
+       "      <td>2021-10-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>102639.0</td>\n",
+       "      <td>2021-10-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>102732.0</td>\n",
+       "      <td>2021-10-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>103048.0</td>\n",
+       "      <td>2021-10-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>103106.0</td>\n",
+       "      <td>2021-10-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1564</th>\n",
+       "      <td>115650.0</td>\n",
+       "      <td>2030-02-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1565</th>\n",
+       "      <td>116119.0</td>\n",
+       "      <td>2030-02-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1566</th>\n",
+       "      <td>111891.0</td>\n",
+       "      <td>2030-02-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1567</th>\n",
+       "      <td>115641.0</td>\n",
+       "      <td>2030-02-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1568</th>\n",
+       "      <td>114355.0</td>\n",
+       "      <td>2030-02-02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1566 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Request ID Date received\n",
+       "0       103120.0    2021-10-14\n",
+       "1       102639.0    2021-10-14\n",
+       "2       102732.0    2021-10-14\n",
+       "3       103048.0    2021-10-14\n",
+       "4       103106.0    2021-10-14\n",
+       "...          ...           ...\n",
+       "1564    115650.0    2030-02-02\n",
+       "1565    116119.0    2030-02-02\n",
+       "1566    111891.0    2030-02-02\n",
+       "1567    115641.0    2030-02-02\n",
+       "1568    114355.0    2030-02-02\n",
+       "\n",
+       "[1566 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date_received"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
